# django_images_practice

./: db.sqlite3  pyproject.toml
image/: models.py  views.py
image/migrations/: 0001_initial.py
image/templates/: index.html  test.html
images/: settings.py  urls.py
