[tool.poetry]
name = "images_practice"
version = "0.1.0"
description = ""
authors = ["Jamal Smilez <jgrigz1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
